Completa autenticacion JWT y manejo de roles